# daily-pipeline

./: .gitignore  404.html  EXTENDED-PIPELINE-OPERATIONS.md  HANDOFF-PLAN.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: CLAUDE.md
.claude/agents/: SETUP-REQUIRED.md  abstraction-expert.md  adversarial.md  agent-refactor.md  agent-updater.md  analysis-expert.md  cleanup.md  code-hygiene.md  conflict-auditor.md  conflict-resolution.md  content-enricher.md  git-operations.md  ingest-expert.md  integration-expert.md  navigator.md  orchestrator.md  output-compiler.md  primary-producer.md  quality-auditor.md  reference-manager.md  repo-liaison.md  reporting-expert.md  security.md  team-builder.md  technical-validator.md  work-summarizer.md
.claude/skills/: tool-python.md
.github/: copilot-instructions.md
.github/agents/: AGENT-TEAM-OPERATIONS.md  SETUP-REQUIRED.md  _build-description.json  abstraction-expert.agent.md  adversarial.agent.md  (+25 more)
api-reference/: index.html
cli-reference/: index.html
configs/: defaults.json  team-schema.json
daily_pipeline/: __init__.py  cli.py  config.py  models.py  protocol.py
docs/: index.md
docs_src/: cli-reference.md  extended-operations.md  getting-started.md  how-it-works.md  index.md  stage-contracts.md
extended-operations/: index.html
getting-started/: index.html
how-it-works/: index.html
protocols/: stages.csv  stages.md
references/: architecture-graph.md  pipeline-graph.md
scripts/: run_daily_pipeline.sh
stage-contracts/: index.html
tests/: test_pipeline.py  test_sync.py
(+149 files in other folders)
